--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ content="width=device-width,initial-scale=1.0">
     <section>
        <h2>About <i>Jr NTR</i></h2>
        <p><u>Jr Nandamuri Taraka Rama Rao</u>,popularly known as <i>Jr NTR</i>
-is a versatile actor in telugu film industry.Nandamuri Taraka Rama Rao Jr. (born 20 May 1983), also known as Tarak, is an Indian actor who primarily works in Telugu cinema. One of the highest paid Telugu film actors,[1][2] Rama Rao has won several accolades, including two Filmfare Awards, two state Nandi Awards, and four CineMAA Awards. Since 2012, he has been featured in Forbes India's Celebrity 100 list.[3]</p>
+is a versatile actor in telugu film industry.Nandamuri Taraka Rama Rao Jr. (born 20 May 1983), also known as Tarak, is an Indian actor who primarily works in Telugu cinema. One of the highest paid Telugu film actors, Rama Rao has won several accolades, including two Filmfare Awards, two state Nandi Awards, and four CineMAA Awards. Since 2012, he has been featured in Forbes India's Celebrity 100 list.</p>
     </section>
     <section>
         <h2>Image Gallery</h2>
