--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@ is a versatile actor in telugu film industry.Nandamuri Taraka Rama Rao Jr. (born
        <p>Follow Jr NTR on <a href="https://twitter.com/jrntr"
       target="_blank">Twitter</a> for the latest updates.</p>
     </footer>
+    For his full moives list CLICK <a href ="ntr.html">,here</a>
    </body>
 </html>
