--- a/ntr.html
+++ b/ntr.html
@@ -5,37 +5,38 @@
     <body>
           <h1>Films</h1>
           <p>
-            1.Ninnu Chudalani (2001)
-            2.Student No.1 (2001)
-            3.Subbu (2001)
-            4.Aadi (2002)
-            5.Allari Ramudu (2002)
-            6.Naaga (2003)
-            7.Simhadri (2003)
-            8.Andhrawala (2004)
-            9.Samba (2004)
-            10.Naa Alludu (2005)
-            11.Narasimhudu (2005)
-            12.Ashok (2006)
-            13.Rakhi (2006)
-            14.Yamadonga (2007)
-            15.Kantri (2008)
-            16.Adhurs (2010)   
-            17.Brindavanam (2010)
-            18.Shakti (2011)   
-            19.Oosaravelli (2011)  
-            20.Dammu (2012)
-            21.Baadshah (2013)
-            22.Ramayya Vasthavayya (2013)
-            23.Rabhasa (2014)
-            24.Temper (2015)
-            25.Nannaku Prematho (2016)
-            26.Janatha Garage (2016)
-            27.Jai Lava Kusa (2017)
-            28.Aravinda Sametha Veera Raghava (2018)
-            29.RRR (2022)
-            30.Devara-1 (2024)
-        </p>
+            <br>1.Ninnu Chudalani (2001)</br>
+            <br>2.Student No.1 (2001)</br>
+            <br>3.Subbu (2001)</p>br>
+            <br>4.Aadi (2002)</p>br>
+            <br>5.Allari Ramudu (2002)</br>
+           <br> 6.Naaga (2003)</br>
+            <br>7.Simhadri (2003)</br>
+            <br>8.Andhrawala (2004)</br>
+            <br>9.Samba (2004)</br>
+            <br>10.Naa Alludu (2005)</br>
+            <br>11.Narasimhudu (2005)</br>
+            <br>12.Ashok (2006)</br>
+            <br>13.Rakhi (2006)</br>
+            <br>14.Yamadonga (2007)</br>
+            <br>15.Kantri (2008)</br>
+           <br> 16.Adhurs (2010)</br>   
+            <br>17.Brindavanam (2010)</br>
+            <br>18.Shakti (2011)</br>   
+            <br>19.Oosaravelli(2011) </br> 
+            <br>20.Dammu (2012)</br>
+           <br> 21.Baadshah (2013)</br>
+           <br> 22.Ramayya Vasthavayya (2013)</br>
+            <br>23.Rabhasa (2014)</br>
+            <br>24.Temper (2015)</br>
+            <br>25.Nannaku Prematho (2016)</br>
+           <br> 26.Janatha Garage (2016)</br>
+           <br> 27.Jai Lava Kusa (2017)</br>
+           <br> 28.Aravinda Sametha Veera Raghava (2018)</br>
+           <br> 29.RRR (2022)</br>
+           <br> 30.Devara-1 (2024)</br>
+          </p>
+          <a href="index.html",>Go home</a>
     </body>
 
 </html>
