--- a/ntr.html
+++ b/ntr.html
@@ -7,8 +7,8 @@
           <p>
             <br>1.Ninnu Chudalani (2001)</br>
             <br>2.Student No.1 (2001)</br>
-            <br>3.Subbu (2001)</p>br>
-            <br>4.Aadi (2002)</p>br>
+            <br>3.Subbu (2001)</br>
+            <br>4.Aadi (2002)</br>
             <br>5.Allari Ramudu (2002)</br>
            <br> 6.Naaga (2003)</br>
             <br>7.Simhadri (2003)</br>
